# ooplabS

./: Array.h  CMakeLists.txt  Figure.cpp  Figure.h  Hexagon.cpp  Hexagon.h  Pentagon.cpp  Pentagon.h  Rhombus.h  Rombe.cpp  Rombe.h  main.cpp  unit.cpp
include/: CustomMemoryResource.hpp  CustomStack.hpp  PlantGrowth.hpp  druid.h  factory.h  logger.h  npc.h  observer.h  scheduler.h  squirrel.h  task.h  visitor.h  werewolf.h
lab_2/: CMakeLists.txt
lab_2/include/: Octal.hpp
lab_2/src/: Octal.cpp
lab_2/tests/: test01.cpp
oop1lab/: CMakeLists.txt  days_to_reach_height.cpp  days_to_reach_height.h  main.cpp  tests.cpp
src/: PlantGrowth.cpp  druid.cpp  factory.cpp  logger.cpp  npc.cpp  observer.cpp  scheduler.cpp  squirrel.cpp  visitor.cpp  werewolf.cpp
test/: test.cpp  tests01.cpp
tests/: test_npc.cpp
